hphp/hack/test/typecheck/like_types/dictionary_key.php
<?hh

function f(mixed $k): void {
  dict[$k as ~arraykey => true];
}
